fix:Changing the images route

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
       </div>
 
-      <img src="../static/assets/analu.png" alt="AnaLu" class="w-[220px] md:w-[350px] lg:w-[400px] object-cover" />
+      <img src="./static/assets/analu.png" alt="AnaLu" class="w-[220px] md:w-[350px] lg:w-[400px] object-cover" />
     </section>
 
     <!-- About us -->
@@ -137,7 +137,7 @@
           </p>
         </div>
 
-        <img src="../static/assets/analu.png" alt="AnaLu" class="w-[180px] md:w-[250px] lg:w-[300px] object-cover" />
+        <img src="./static/assets/analu.png" alt="AnaLu" class="w-[180px] md:w-[250px] lg:w-[300px] object-cover" />
       </div>
     </section>
 
