fix:adjusting some routes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="https://instagram.com/anafuzineli" class="text-white text-2xl hover:text-purple-200">
           <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="https://github.com/" class="text-white text-2xl hover:text-purple-200">
+        <a href="https://github.com/anafuzinelli/site-ana" class="text-white text-2xl hover:text-purple-200">
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
@@ -199,7 +199,7 @@
         <p class="text-gray-500 text-[26px] font-bold hover:text-purple-500">SuperAção</p>
         <div class="flex gap-4 mt-2">
           <a href="https://instagram.com/anafuzineli" class="text-gray-500 text-2xl hover:text-purple-500"><i class="fa-brands fa-instagram"></i></a>
-          <a href="https://github.com/" class="text-gray-500 text-2xl hover:text-purple-500"><i class="fa-brands fa-github"></i></a>
+          <a href="https://github.com/anafuzinelli/site-ana" class="text-gray-500 text-2xl hover:text-purple-500"><i class="fa-brands fa-github"></i></a>
         </div>
       </div>
 
