feat:Changing style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="bg-white">
-
+ 
   <!-- HEADER -->
   <header class="fixed top-0 left-0 w-full bg-purple-600 shadow-md  h-[80px] md:h-[80px] z-50 ">
     <div class="max-w-[1400px] mx-auto h-full px-4 flex items-center justify-between">
@@ -76,28 +76,36 @@
     })
   </script>
 
-  <!-- MAIN -->
-  <main class="flex flex-col items-center justify-center mt-10 gap-24 pb-24 max-w-[1400px] mx-auto px-4">
 
-    <!-- Hero: stack on small, row on large -->
-    <section id="herosection" class="w-full flex flex-col lg:flex-row items-center justify-center gap-8 lg:gap-20 text-center lg:text-left mt-[100px]">
+  <section id="herosection" 
+  class="w-full bg-gradient-to-r from-blue-500 to-cyan-300 
+  pt-[140px] pb-12
+  flex flex-col  items-center justify-center gap-[20px] lg:gap-20 
+  text-center rounded-[40px] lg:text-left ">
+  
+    <div class="flex flex-row items-center justify-center">
       <div class="flex flex-col items-center lg:items-start">
-        <span class="font-bold bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-cyan-300 text-[48px] md:text-[80px]">SuperAção</span>
-        <p class="text-purple-500 text-[24px] md:text-[40px] font-bold mt-2">Desenvolvendo Soft Skills</p>
-        <p class="text-purple-500 text-[24px] md:text-[40px] font-bold">para crianças com deficiências físicas</p>
+        <span class="font-bold text-[80px] text-purple-500">
+          SuperAção
+        </span>
+
+        <p class="text-cyan-300 text-[24px] md:text-[40px] font-bold mt-2">Desenvolvendo Soft Skills</p>
+        <p class="text-cyan-300 text-[24px] md:text-[40px] font-bold">para crianças com deficiências físicas</p>
 
         <div class="flex gap-4 mt-5">
-          <button class="bg-purple-500 text-white px-4 py-2 rounded shadow-md transform transition hover:scale-105">Veja Metodologias</button>
-          <button class="bg-cyan-400 text-white px-4 py-2 rounded shadow-md transform transition hover:scale-105">Conheça a Ana Lu</button>
+          <a href="#metodologysection" class="bg-purple-500 text-white px-4 py-2 rounded shadow-md transform transition hover:scale-105">Veja Metodologias</a>
+          <a href="#analusection" class="bg-cyan-400 text-white px-4 py-2 rounded shadow-md transform transition hover:scale-105">Conheça a Ana Lu </a>  
         </div>
       </div>
 
+    
+    
       <img src="./static/assets/analu.png" alt="AnaLu" class="w-[220px] md:w-[350px] lg:w-[400px] object-cover" />
-    </section>
+    </div>
 
-    <!-- About us -->
-    <section id="aboutussection" class="w-full bg-gradient-to-r from-purple-600 to-cyan-300 rounded-[40px] pb-16 pt-8 px-6">
-      <h1 class="text-white text-[36px] md:text-[60px] font-bold text-center md:text-left mb-4">Sobre Nós</h1>
+     <!-- About us -->
+    <div id="aboutussection" class="w-full rounded-[40px]  pb-16 pt-8 px-6">
+      <h1 class="text-white text-[36px] md:text-[60px] font-bold  text-center md:text-left mb-4">Sobre Nós</h1>
 
       <article class="text-white text-[16px] md:text-[22px] font-bold leading-relaxed text-center md:text-left max-w-[1100px] mx-auto">
         A SuperAção é uma iniciativa que nasce ao tomarmos conta em relação a importância
@@ -140,10 +148,16 @@
 
         <img src="./static/assets/analu.png" alt="AnaLu" class="w-[180px] md:w-[250px] lg:w-[300px] object-cover" />
       </div>
-    </section>
+    </div>
+
+  </section>
+
+
+  <!-- MAIN -->
+  <main class="flex flex-col items-center justify-center  gap-24 pb-24 w-full">
 
     <!-- Mission -->
-    <section id="missionsection" class="w-full px-4 text-center">
+    <section id="missionsection" class="w-full px-4 text-center mt-10">
       <h2 class="bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-cyan-300 font-bold text-[48px] md:text-[80px]">Missão e Valores</h2>
 
       <div class="mt-6 space-y-3">
