fix:Fixing some lines of code

--- a/index.html
+++ b/index.html
@@ -78,34 +78,37 @@
 
 
   <section id="herosection" 
-  class="w-full bg-gradient-to-r from-blue-500 to-cyan-300 
+  class="w-full 
   pt-[140px] pb-12
-  flex flex-col  items-center justify-center gap-[20px] lg:gap-20 
-  text-center rounded-[40px] lg:text-left ">
+  flex flex-col lg:flex-row items-center justify-center gap-8 lg:gap-20 
+  text-center lg:text-left">
   
-    <div class="flex flex-row items-center justify-center">
-      <div class="flex flex-col items-center lg:items-start">
-        <span class="font-bold text-[80px] text-purple-500">
-          SuperAção
-        </span>
+    <div class="flex flex-col items-center lg:items-start">
+      <span class="font-bold bg-clip-text text-transparent bg-gradient-to-r from-purple-500 to-cyan-300 text-[48px] md:text-[80px]">
+        SuperAção
+      </span>
 
-        <p class="text-cyan-300 text-[24px] md:text-[40px] font-bold mt-2">Desenvolvendo Soft Skills</p>
-        <p class="text-cyan-300 text-[24px] md:text-[40px] font-bold">para crianças com deficiências físicas</p>
+      <p class="text-purple-500 text-[24px] md:text-[40px] font-bold mt-2">Desenvolvendo Soft Skills</p>
+      <p class="text-purple-500 text-[24px] md:text-[40px] font-bold">para crianças com deficiências físicas</p>
 
-        <div class="flex gap-4 mt-5">
-          <a href="#metodologysection" class="bg-purple-500 text-white px-4 py-2 rounded shadow-md transform transition hover:scale-105">Veja Metodologias</a>
-          <a href="#analusection" class="bg-cyan-400 text-white px-4 py-2 rounded shadow-md transform transition hover:scale-105">Conheça a Ana Lu </a>  
-        </div>
+      <div class="flex gap-4 mt-5">
+        <a href="#metodologysection" class="bg-purple-500 text-white px-4 py-2 rounded shadow-md transform transition hover:scale-105">Veja Metodologias
+        </a> 
+        <a href="#analusection" class="bg-cyan-400 text-white px-4 py-2 rounded shadow-md transform transition hover:scale-105">Conheça a Ana Lu
+        </a>  
       </div>
-
-    
-    
-      <img src="./static/assets/analu.png" alt="AnaLu" class="w-[220px] md:w-[350px] lg:w-[400px] object-cover" />
     </div>
 
-     <!-- About us -->
-    <div id="aboutussection" class="w-full rounded-[40px]  pb-16 pt-8 px-6">
-      <h1 class="text-white text-[36px] md:text-[60px] font-bold  text-center md:text-left mb-4">Sobre Nós</h1>
+    <img src="./static/assets/analu.png" alt="AnaLu" class="w-[220px] md:w-[350px] lg:w-[400px] object-cover" />
+  </section>
+
+
+  <!-- MAIN -->
+  <main class="flex flex-col items-center justify-center mt-10 gap-24 pb-24 max-w-[1400px] mx-auto px-4">
+
+    <!-- About us -->
+    <section id="aboutussection" class="w-full flex flex-col items-center justify-center bg-gradient-to-r from-purple-600 to-cyan-300 rounded-[40px] pb-16 pt-8 px-6">
+      <h1 class="text-white text-[36px] md:text-[60px] font-bold text-center md:text-left mb-4">Sobre Nós</h1>
 
       <article class="text-white text-[16px] md:text-[22px] font-bold leading-relaxed text-center md:text-left max-w-[1100px] mx-auto">
         A SuperAção é uma iniciativa que nasce ao tomarmos conta em relação a importância
@@ -148,16 +151,10 @@
 
         <img src="./static/assets/analu.png" alt="AnaLu" class="w-[180px] md:w-[250px] lg:w-[300px] object-cover" />
       </div>
-    </div>
-
-  </section>
-
-
-  <!-- MAIN -->
-  <main class="flex flex-col items-center justify-center  gap-24 pb-24 w-full">
+    </section>
 
     <!-- Mission -->
-    <section id="missionsection" class="w-full px-4 text-center mt-10">
+    <section id="missionsection" class="w-full px-4 text-center">
       <h2 class="bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-cyan-300 font-bold text-[48px] md:text-[80px]">Missão e Valores</h2>
 
       <div class="mt-6 space-y-3">
